--- a/www/templates/resource/resource.html
+++ b/www/templates/resource/resource.html
@@ -38,7 +38,7 @@
             </ion-list>
         </div>
         <div class="whitepaper">
-            <div ng-show="whitePapersErrorMsg==''">
+            <div>
                 <h5 class="heading">WHITE PAPERS</h5>
                 <a class="see-all" ng-click="whitepaperOpen()">See All &gt;</a>
                 <ion-list class="list">
@@ -50,10 +50,10 @@
                     </ion-item>
                 </ion-list>
             </div>
-            <div ng-show="whitePapersErrorMsg!=''">
+            <!--<div ng-show="whitePapersErrorMsg!=''">
                 <h5 class="heading">WHITE PAPERS</h5>
                 <div class="card item item-text-wrap">{{whitePapersErrorMsg}}</div>
-            </div>
+            </div>-->
         </div>
         <div class="archivedwebinars">
             <h5 class="heading">PREVIOUS WEBINARS</h5>
