--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -1,22 +1,22 @@
 <ion-tabs class="tabs-icon-top tabs-color-active-positive bottom-tab">
     <!-- Discover Tab -->
-    <ion-tab title="Discover" icon-off="all-icon-bottom-menu_discover" icon-on="all-icon-bottom-menu_discover" href="" ng-click="redirect('discover')">
+    <ion-tab title="Discover" icon-off="all-icon-bottom-menu_discover" icon-on="all-icon-bottom-menu_discover" href="" ng-click="redirect('Discover')">
         <ion-nav-view name="tab-discover@tab"></ion-nav-view>
     </ion-tab>
     <!-- My Learning Tab -->
-    <ion-tab title="My Learning" icon-off="all-icon-bottom-menu_my-learning" icon-on="all-icon-bottom-menu_my-learning" href="" ng-click="redirect('mylearning')">
+    <ion-tab title="My Learning" icon-off="all-icon-bottom-menu_my-learning" icon-on="all-icon-bottom-menu_my-learning" href="" ng-click="redirect('My Learning')">
         <ion-nav-view name="tab-mylearning@tab"></ion-nav-view>
     </ion-tab>
     <!-- Tech tips Tab -->
-    <ion-tab title="Tech Tips" icon-off="all-icon-bottom-menu_techtips" icon-on="all-icon-bottom-menu_techtips" href="" ng-click="redirect('techtips')">
+    <ion-tab title="Tech Tips" icon-off="all-icon-bottom-menu_techtips" icon-on="all-icon-bottom-menu_techtips" href="" ng-click="redirect('Tech Tip')">
         <ion-nav-view name="tab-techtips@tab"></ion-nav-view>
     </ion-tab>
     <!-- App Library Tab -->
-    <ion-tab title="Toolkit" icon-off="all-icon-bottom-menu_apps" icon-on="all-icon-bottom-menu_apps" href="" ng-click="redirect('applibrary')">
+    <ion-tab title="Toolkit" icon-off="all-icon-bottom-menu_apps" icon-on="all-icon-bottom-menu_apps" href="" ng-click="redirect('App Library')">
         <ion-nav-view name="tab-applibrary@tab"></ion-nav-view>
     </ion-tab>
     <!-- Resources Tab -->
-    <ion-tab title="Resources" icon-off="all-icon-bottom-menu_resources" icon-on="all-icon-bottom-menu_resources" href="" ng-click="redirect('resource')">
+    <ion-tab title="Resources" icon-off="all-icon-bottom-menu_resources" icon-on="all-icon-bottom-menu_resources" href="" ng-click="redirect('Resources')">
         <ion-nav-view name="tab-resource@tab"></ion-nav-view>
     </ion-tab>
 </ion-tabs>
