--- a/www/templates/welcome/intro.html
+++ b/www/templates/welcome/intro.html
@@ -1,4 +1,4 @@
-<ion-view hide-nav-bar="true" class="intro-wrapper" ng-init="init()">
+<ion-view hide-nav-bar="true" class="intro-wrapper">
     <ion-content>
         <div class="full-width">
             <div class="header">
