--- a/www/templates/discover/discover.html
+++ b/www/templates/discover/discover.html
@@ -1,22 +1,5 @@
 <ion-view view-title="Discover" ng-init="init()">
     <ion-nav-title class="discover-wrapper">
-        <!-- <div class="top-header">
-            <div class="left">
-                <table>
-                    <tr>
-                        <td><img ng-src="{{logoURL}}" class="scte-isbe-cortex-logo"></td>
-                    </tr>
-                </table>
-            </div>
-            <div class="right" ng-click="fetchIonicDeployInfo()">
-                <div><img src="img/prof-pic_default.png" class="profile-pic-icn"></div>
-                <div class="user-name">
-                    <div>Hello</div>
-                    <br>
-                    <div>{{username}}!</div>
-                </div>
-            </div>
-        </div> -->
         <div class="top-header">
             <div class="center" ng-if="logoURL" style="margin-top: 6px;">
                 <div class="left" ng-click="fetchIonicDeployInfo()">
@@ -29,7 +12,7 @@
             </div>
         </div>
     </ion-nav-title>
-    <ion-header-bar class="bar-subheader search-box-wrapper" style="position: relative">
+    <ion-header-bar class="bar-subheader search-box-wrapper">
         <label class="item-input-wrapper" ng-show="!initialFocus">
             <i class="all-icon-icon_search_white search-icn"></i>
             <input type="search" placeholder="Enter keyword here" ng-model="query" ng-focus="showRecentSearches()" ng-blur="hideRecentSearches()" ng-change="searchChange()" ng-keyup="$event.keyCode == 13 && searchResults(query)">
@@ -38,10 +21,10 @@
             <i class="all-icon-icon_search_white search-icn"></i>
             <input type="search" placeholder="Enter keyword here" ng-model="query" ng-focus="showRecentSearches()" ng-blur="hideRecentSearches()" ng-change="searchChange()" ng-keyup="$event.keyCode == 13 && searchResults(query)" autofocus="true">
         </label>
-        <button ng-if="isAndroid" class="button button-clear button-stable" ng-click="voiceRecog()" style="    position: absolute; top: 16px; right: 19px" ng-show="query == ''">
+        <button ng-if="isAndroid" class="button button-clear button-stable" ng-click="voiceRecog()" style="position:absolute;top:16px;right:19px" ng-show="query == ''">
             <i class="all-icon-icon_mic mic-icn"></i>
         </button>
-        <button class="button button-clear button-stable" ng-click="clearSearchField()" style="    position: absolute; top: 16px; right: 19px" ng-show="query != ''"><i class="ion-close-circled mic-icn"></i></button>
+        <button class="button button-clear button-stable" ng-click="clearSearchField()" style="position:absolute;top:16px;right:19px" ng-show="query != ''"><i class="ion-close-circled mic-icn"></i></button>
     </ion-header-bar>
     <ion-content class="discover-wrapper">
         <ion-slide-box on-slide-changed="slideHasChanged($index)" active-slide="activeIndex" ng-init="activeIndex = 0" class="slide-box" does-continue="true">
@@ -90,22 +73,6 @@
                                     </td>
                                 </tr>
                             </table>
-                            <!--  <div class="col-30" style="margin-left: 10px;">
-                            <div class="date-box">
-                                <img src="img/svg/img_calendar.svg" />
-                                <div class="date">{{event.formattedBeginDate | date: 'dd'}}</div>
-                                <div class="month">{{event.formattedBeginDate | date: 'MMM'}} '{{event.formattedBeginDate | date: 'yy'}}</div>
-                            </div>
-                        </div>
-                        <div class="col-70" style="margin-left: -10px;">
-                            <div class="text-box">
-                                <div class="row-top"><a href="">{{event.title}}</a></div>
-                                <div class="row-bottom"><b>Location: </b> {{event.address1}} {{event.address2}} {{event.address3}} {{event.city}} {{event.stateProvince}} {{event.postal}}
-                                    <br>
-                                    <b>When: </b>{{event.formattedBeginDate | date: 'shortTime'}}
-                                </div>
-                            </div>
-                        </div> -->
                         </div>
                     </div>
                 </div>
