disable version dialog

--- a/www/templates/discover/discover.html
+++ b/www/templates/discover/discover.html
@@ -7,7 +7,7 @@
                 </div>
                 <img ng-src="{{logoURL}}" class="scte-isbe-cortex-logo">
             </div>
-            <div ng-if="!logoURL" ng-click="fetchIonicDeployInfo()">
+            <div ng-if="!logoURL" <!-- ng-click="fetchIonicDeployInfo() -->">
                 <img src="img/cortex_logo.png" class="header-cortex-logo">
             </div>
         </div>
