fixing UAT issues

--- a/www/templates/welcome/login.html
+++ b/www/templates/welcome/login.html
@@ -1,4 +1,4 @@
-<ion-view hide-nav-bar="true" class="login-wrapper">
+<ion-view hide-nav-bar="true" class="login-wrapper" ng-init="init()">
     <ion-content>
         <div class='full-size'>
             <div class='logintop'>
