--- a/www/templates/welcome/login.html
+++ b/www/templates/welcome/login.html
@@ -33,9 +33,9 @@
                     <img src="img/SCTE-ISBE-logo.png" />
                 </div>
                 <div class="signuptext text-center">
-                    <span>Don't have an account to login?</span>
+                    <span>Access to CORTEX Mobile is a benefit provided exclusively to SCTE/ISBE members. To use CORTEX Mobile, become a member at scte.org.</span>
                 </div>
-                <div class="join-scte">
+                <div class="join-scte hide">
                     <button ng-click="joinSCTE()" class="button button-outline button-energized button-block">
                         JOIN SCTE NOW
                     </button>
