--- a/scss/login.scss
+++ b/scss/login.scss
@@ -95,7 +95,7 @@
                 padding-top: 5%;
             }
             .signuptext {
-                margin-top: 5%;
+//                margin-top: 5%;
             }
             .join-scte {
                 margin-bottom: 8%;
