fix ga events and ncta link

--- a/www/templates/discover/discover.html
+++ b/www/templates/discover/discover.html
@@ -109,7 +109,7 @@
         </div>
         <div class="rss-feeds-box">
             <div>
-                <img src="img/NCTA-Horizontal.png" class="informed-logo">
+                <img src="img/NCTA-Horizontal.png" class="informed-logo" ng-click="openNctaURL()">
                 <a class="see-all" ng-click="nctaDetailScreen()" style="top: 20px">See All &gt;</a>
             </div>
             <ion-list class="list">
