new login screen header image

--- a/www/templates/welcome/login.html
+++ b/www/templates/welcome/login.html
@@ -4,7 +4,7 @@
             <div class='logintop'>
                 <div class="row">
                     <div class="image-logo text-center">
-                        <img src="img/cortex-logo-white.png" />
+                        <img src="img/CORTEX_Logo_AppTag_WH.png" />
                     </div>
                 </div>
                 <div class="usernamediv">
