--- a/www/templates/welcome/intro.html
+++ b/www/templates/welcome/intro.html
@@ -3,7 +3,7 @@
         <div class="full-width">
             <div class="header">
                 <div class="img-box">
-                    <img src="img/cortex-logo.png" class="img-responsive">
+                    <img src="img/CORTEX_Logo_AppTag_BL.png" class="img-responsive">
                 </div>
             </div>
             <div class="contents">
@@ -27,6 +27,12 @@
             <div class="footer">
                 <div class="scte-logo text-center">
                     <img src="img/SCTE-ISBE-logo.png" />
+                </div>
+                <div class="row show-again-next-time">
+                  <div class="col col-80">
+                    <ion-checkbox ng-model="filter">show again next time</ion-checkbox>
+                  </div>
+                  <div class="col col-20"></div>
                 </div>
                 <button class="button button-energized button-full" ng-click="skipIntro()">{{buttonName}}</button>
             </div>
