--- a/scss/intro.scss
+++ b/scss/intro.scss
@@ -13,7 +13,7 @@
         right: 0;
         .header {
             position: absolute;
-            top: 0;
+            top: 20px;
             width: 100%;
             height: 15%;
             .img-box {
@@ -42,7 +42,7 @@
                 margin: 0 auto;
                 margin-left: -140px;
                 width: 280px;
-                height: 320px;
+                height: 260px;
                 border-radius: 0;
                 background-color: $color-light;
                 box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.2);
@@ -66,12 +66,12 @@
                         }
                         p {
                             font-size: 18px;
-                            line-height: 23px;
+                            line-height: 18px;
                         }
                     }
                     .box-footer {
                         position: absolute;
-                        bottom: 10px;
+                        bottom: 0px;
                         width: 100%;
                         font-size: 13px;
                         color: $color-link;
@@ -83,13 +83,23 @@
         }
         .footer {
             position: absolute;
-            bottom: 0;
+            bottom: 0px;
             width: 100%;
             height: 20%;
             .scte-logo {
                 img {
+                    position: relative;
+                    bottom: 30px;
                     width: 80px;
                 }
+            }
+            .show-again-next-time{
+              position: relative;
+              top: -30px;
+            }
+            .show-again-next-time .item {
+                border: none;
+                background: none;
             }
             .button {
                 position: absolute;
@@ -108,7 +118,7 @@
         .full-width {
             .contents {
                 td-card {
-                    height: 250px;
+                    height: 210px;
                     margin-top: 20px;
                     .box {
                         .box-header {
@@ -122,6 +132,12 @@
                             }
                         }
                     }
+                }
+            }
+            .footer {
+                .show-again-next-time{
+                  position: relative;
+                  top: -45px;
                 }
             }
         }
