tweak Featured Resources when only apps are shown

--- a/scss/discover.scss
+++ b/scss/discover.scss
@@ -83,6 +83,8 @@
             width: 100%;
             overflow-x: scroll;
             margin-top: 10px;
+            padding-top: 10px;
+            padding-left: 10px;
             td {
                 width: 80px;
                 padding: 0 20px 0 0;
@@ -92,7 +94,8 @@
                 p {
                     width: 80px;
                     word-wrap: break-word;
-                    font-size: 10pt;
+                    font-size: 0.9em;
+                    line-height: 14px;
                     color: $color-dark;
                     text-align: center;
                 }
